frontend/tests/cases/negative/nameClashInterfaceAndTyCon.gr
data A a = A

-- interface name clashes with type constructor
interface A a where
  simple : a -> a
